--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,35 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Responsive Admin Dashboard Template">
+    <meta name="keywords" content="admin,dashboard">
+    <meta name="author" content="stacks">
+    <!-- The above 6 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    
+    <!-- Title -->
+    <title>Web Application for Accounting</title>
+
+    <!-- Styles -->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="./phantom-themes.com/lime/theme/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./phantom-themes.com/lime/theme/assets/plugins/font-awesome/css/all.min.css" rel="stylesheet">
+    <link href="./phantom-themes.com/lime/theme/assets/plugins/toastr/toastr.min.css" rel="stylesheet">  
+  
+        <!-- Theme Styles -->
+    <link href="./phantom-themes.com/lime/theme/assets/css/lime.min.css" rel="stylesheet">
+    <link href="./phantom-themes.com/lime/theme/assets/css/custom.css" rel="stylesheet">
+
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -39,5 +68,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="./phantom-themes.com/lime/theme/assets/plugins/jquery/jquery-3.1.0.min.js"></script>
+    <script src="./phantom-themes.com/lime/theme/assets/plugins/bootstrap/popper.min.js"></script>
+    <script src="./phantom-themes.com/lime/theme/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./phantom-themes.com/lime/theme/assets/plugins/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="./phantom-themes.com/lime/theme/assets/plugins/chartjs/chart.min.js"></script>
+    <script src="./phantom-themes.com/lime/theme/assets/plugins/apexcharts/dist/apexcharts.min.js"></script>
+    <script src="./phantom-themes.com/lime/theme/assets/plugins/toastr/toastr.min.js"></script>
+    <script src="./phantom-themes.com/lime/theme/assets/js/lime.min.js"></script>
+    <script src="./phantom-themes.com/lime/theme/assets/js/pages/dashboard.js"></script>
+  
   </body>
 </html>
